# estateSearch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
backup/estatesearch/: main.py  version.py
backup/estatesearch/analyze/: __init__.py
backup/estatesearch/export/: __init__.py
backup/estatesearch/process/: __init__.py  process.py
backup/estatesearch/search/: search.py
docs/: MLpipeline.md  README.md  estatesearch.drawio  estatesearch.drawio.html
docs/uk/: Auctions.md  Parameters.md  README.md  rightmove.md
docs/uk/example/: pageMODEL.json  rightmove example 2 bedroom maisonette for sale in Belvedere Road, Bexleyheath, DA7.html
estatesearch/: __init__.py  main.py
estatesearch/download/: __init__.py  download.py  jsonmanager.py
estatesearch/process/: datastructures.py  process.py
estatesearch/search/: __init__.py  search.py  searchConfig.py
estatesearch/search/uk/: __init__.py  details.py  new_search.py  parameters.py  rightmove.py
estatesearch/select/: __init__.py
estatesearch/visualize/: __init__.py
results/: search_results_Kent_buy_2025-04-10.json  search_results_Kent_rent_2025-03-29.json  search_results_Kent_rent_2025-04-10.json  search_results_London_buy_2025-04-10.json  search_results_London_rent_2025-04-10.json  search_results_PE28 0SS_buy_2025-03-26.json  search_results_PE28 0SS_buy_2025-03-27.json
src/estatesearch/search/: data.csv  (+1 more)
tests/: search_uk.py  test_DownloadManager.py  test_connections.py  test_search_uk.py  test_search_uk_rigthmove.py
tests/data/: rightmove_samples.py
(+7 files in other folders)
