[project]
name = "estatesearch"
version = "0.1.0"
description = "Real Estate Data Collection and Analysis Package"
authors = [
    {name = "CDMonsalveA",email = "cdmonsalvea1@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "parsel (>=1.10.0,<2.0.0)",
    "jmespath (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
