[project]
name = "estatesearch"
version = "0.0.0.a-1"
description = "A lightweight Python package to search, download, process, analyse and select real estate properties from various sources."
authors = [
    {name = "Cristian Monsalve"}
]
license = {text = "MIT Licence"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "scrapy-playwright (>=0.0.43,<0.0.44)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "twisted[http2] (>=24.11.0,<25.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
scrapy = "^2.12.0"
scrapy-playwright = "^0.0.43"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
